# VibeCheck

./: CMakeLists.txt  KNOWN_ISSUES.md  README.md  metadata.json  run.sh
contents/config/: config.qml  main.xml
contents/ui/: configGeneral.qml  main.qml
src/: audio_plugin.cpp  audio_plugin.h
